--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ scikit-learn
 numpy
 seaborn
 
-#-e . # To install local package(i.e DimondPricePrediction)
+-e . # To install local package(i.e DimondPricePrediction)
