Renamed the file

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ numpy
 seaborn
 Flask
 
--e . # To install local package(i.e DimondPricePrediction)
+-e . # To install local package(i.e DiamondPricePrediction)
